deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-todo-deployment
  labels: 
    app: node-app
  namespace: node-todo-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: node-app
  template:
    metadata:
      labels:
        app: node-app
    spec:
      containers:
        - name: node-todo-dctr
          image: digirajsolutions/node-todo-app:latest
          ports:
            - containerPort: 8000
